fix background resizing overlap issue and ignore firebase cache

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,6 +1,5 @@
 .photo {
-    position: absolute;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-image: url(../img/ivantruong_2.jpg);
     background-repeat: no-repeat;
